# QGeo

./: README.md  pyproject.toml
notebook/: TestNotebook.ipynb
notebook/output/: qft_gateSumComplexities.npy  qft_geoComplexity_3_qubits.pkl  qft_geoComplexity_4_qubits.pkl
src/QGeo/: QGeoSolver.py  __init__.py  boilerplate.py  differential_equations.py  pauli_basis.py
src/QGeo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/QGeoPackage/: __init__.py
